force-app/main/default/objects/Match__c/fields/Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when both parties have completed DocuSign. Triggers the Match Activation Flow (Flow A) which creates the subscription invoices and placement fee. Also unlocks Status = Active via validation rule.</description>
    <label>Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>