force-app/main/default/objects/Match__c/fields/Churn_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Score__c</fullName>
    <label>Churn Risk Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>