force-app/main/default/objects/Match__c/fields/Compatibility_Score__c.field-meta.xml
<CustomField>
    <fullName>Compatibility_Score__c</fullName>
    <label>Compatibility Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>