force-app/main/default/objects/Match__c/fields/DocuSign_Envelope__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope__c</fullName>
    <label>DocuSign Envelope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>