force-app/main/default/objects/Match__c/fields/Housing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Housing_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Housing Unit associated with this Match. The Match Activation Flow traverses this lookup to read Market_Rent_ZIP__c and Effective_Renter_Rent__c when calculating the 15% Property Placement Fee.</description>
    <label>Housing Unit</label>
    <referenceTo>Housing_Unit__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <type>Lookup</type>
</CustomField>