force-app/main/default/objects/Match__c/fields/Monthly_Hours_Required__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Hours_Required__c</fullName>
    <label>Monthly Hours Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>