force-app/main/default/objects/Match__c/fields/Move_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Move_In_Date__c</fullName>
    <description>The agreed move-in date for this match. Used by the Match Activation Flow as the Invoice_Date__c and Billing_Period_Start__c on the first subscription invoices.</description>
    <label>Move-In Date</label>
    <type>Date</type>
</CustomField>