force-app/main/default/objects/Match__c/fields/Renter_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Renter_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renter Accepted</label>
    <type>Checkbox</type>
</CustomField>