force-app/main/default/objects/Match__c/fields/Senior_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Senior_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior Accepted</label>
    <type>Checkbox</type>
</CustomField>