force-app/main/default/objects/Match__c/fields/Senior_Host__c.field-meta.xml
<CustomField>
    <fullName>Senior_Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Host</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Matches as Senior Host</relationshipLabel>
    <relationshipName>Senior_Host_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>