force-app/main/default/objects/Match__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle status of the Match. Flows use this field heavily: Monthly Billing filters on Active, Dunning Flow sets Suspended, Proration Flow triggers on Ended values. Validation rule prevents Active without Agreement_Signed__c = true.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proposed</fullName>
            </value>
            <value>
                <fullName>Pending Senior Acceptance</fullName>
            </value>
            <value>
                <fullName>Pending Renter Acceptance</fullName>
            </value>
            <value>
                <fullName>Both Accepted</fullName>
            </value>
            <value>
                <fullName>Intro Meeting Scheduled</fullName>
            </value>
            <value>
                <fullName>Agreement Sent</fullName>
            </value>
            <value>
                <fullName>Agreement Signed</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>On Probation</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Ended - Renewed</fullName>
            </value>
            <value>
                <fullName>Ended - Natural Conclusion</fullName>
            </value>
            <value>
                <fullName>Ended - Mutual Agreement</fullName>
            </value>
            <value>
                <fullName>Ended - Renter Violation</fullName>
            </value>
            <value>
                <fullName>Ended - Senior Withdrawal</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>