force-app/main/default/objects/Match__c/fields/Young_Renter__c.field-meta.xml
<CustomField>
    <fullName>Young_Renter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Young Renter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Matches as Young Renter</relationshipLabel>
    <relationshipName>Young_Renter_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>