force-app/main/default/objects/Match__c/validationRules/Active_Requires_Agreement_Signed.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Requires_Agreement_Signed</fullName>
    <active>true</active>
    <description>Prevents a Match from being set to Active until the Housing Agreement has been signed via DocuSign.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Active&quot;),
    NOT(Agreement_Signed__c)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>A Match cannot be Active until the Housing Agreement has been signed (Agreement Signed must be checked).</errorMessage>
</ValidationRule>